[gd_scene load_steps=2 format=3 uid="uid://ipecvhmr537i"]

[ext_resource type="Script" path="res://src/menu/menu.gd" id="1_if8t4"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_if8t4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -152.5
offset_right = 246.0
offset_bottom = 152.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Começar Jogo - Modo Clássico"

[node name="StartGameButton2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Começar Jogo - Modo Infinito"

[node name="EndCreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Créditos"

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartGameButton2" to="." method="_on_start_game_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/EndCreditsButton" to="." method="_on_end_credits_button_pressed"]
